<resources>
    <string name="app_name">CostMemories</string>

    <string name="date_picker_title">Дата покупки</string>

    <string name="empty_title_error">Название не может быть пустым</string>
    <string name="date_input_error">Неверная дата</string>
    <string name="cost_input_error">Введите цену</string>

    <string name="cost_pattern">%d&#8381;</string>
    <string name="add_button_description">добавить покупку</string>
    <string name="empty_purchases_list_caption">Пусто</string>
    <string name="empty_purchases_list_hint">измените фильтр или добавьте покупку</string>

    <string name="date_edit_hint">Дата</string>
    <string name="product_edit_hint">Продукт</string>
    <string name="title_edit_hint">Название</string>
    <string name="shop_edit_hint">Место покупки</string>
    <string name="cost_edit_hint">Цена</string>
    <string name="comment_edit_hint">Доп. информация</string>

    <string name="edit_purchase_caption">Редактировать</string>
    <string name="purchase_edit_save">Сохранить</string>
    <string name="purchase_edit_delete">Удалить</string>


    <string name="add_purchase_success">Покупка добавлена</string>
    <string name="new_purchase_caption">Новая покупка</string>
    <string name="button_add_caption">добавить</string>
    <string name="menu_home_select_all_title">select all</string>
    <string name="menu_home_delete_title">delete</string>

    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="dialog_purchase_delete_title">Внимание!</string>
    <string name="dialog_purchase_delete_message">Хотите удалить покупку?</string>
    <string name="dialog_db_item_delete_title">Внимание!</string>
    <string name="dialog_empty_item_delete_message">Удалить &#171;%s&#187;?</string>
    <string name="dialog_item_delete_message">&#171;%s&#187; упоминается в %d покупках. Все они будут удалены. Удаляем?</string>
    <string name="dialog_replace_confirm_message">%s &#171;%s&#187; уже есть. Объединить покупки?</string>
    <string name="dialog_replace_success_message">&#171;%s&#187; обновлён</string>

    <string name="db_frag_title_caption">Название</string>
    <string name="db_frag_shop_caption">Магазин</string>
    <string name="db_frag_product_caption">Продукт</string>
    <string name="db_frag_filter_only_empty">только пустые</string>
    <string name="db_frag_filter_all">показывать все</string>

    <string name="db_item_icon_delete_description">Удалить</string>
    <string name="db_item_icon_apply_description">Применить</string>
    <string name="db_item_hint">элемент</string>

    <string name="bottom_menu_home_title">Покупки</string>
    <string name="bottom_menu_data_base_title">Данные</string>
    <string name="bottom_menu_setting_title">Настройки</string>
    <string name="export_button">экспорт данных в файл</string>
    <string name="import_button">Загрузить покупки из файла</string>


</resources>