<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_home_2"
        android:title="@string/bottom_menu_home_title"
        app:showAsAction="ifRoom" />

<!--    <item-->
<!--        android:id="@+id/addPurchaseFragment"-->
<!--        android:icon="@drawable/icon_purchase"-->
<!--        android:title="Purchase"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/dataBaseFragment"
        android:icon="@drawable/icon_list"
        android:title="@string/bottom_menu_data_base_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/icon_settings"
        android:title="@string/bottom_menu_setting_title"
        app:showAsAction="ifRoom" />

</menu>