<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ksv.costmemories.ui.settings.model.SettingsViewModel" />

        <import type="android.view.View" />

        <import type="com.ksv.costmemories.ui.settings.model.SettingsState" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.state instanceof SettingsState.Loading ? View.VISIBLE : View.GONE}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            tools:context=".ui.settings.view.SettingsFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_menu_setting_title"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/export_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="@{!(viewModel.state instanceof SettingsState.Loading)}"
                android:onClick="@{()-> viewModel.onExportClick()}"
                android:text="@string/export_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/import_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="@{!(viewModel.state instanceof SettingsState.Loading)}"
                android:onClick="@{()-> viewModel.onImportClick()}"
                android:text="@string/import_button" />

        </LinearLayout>
    </FrameLayout>
</layout>
