<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.database.view.DataBaseFragment">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/data_base_background"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/data_base_card_background"
            app:cardCornerRadius="16dp">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_products"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/db_frag_product_caption"
                    android:theme="@style/Theme.CostMemories.ForRadio" />

                <RadioButton
                    android:id="@+id/radio_titles"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/db_frag_title_caption"
                    android:theme="@style/Theme.CostMemories.ForRadio" />

                <RadioButton
                    android:id="@+id/radio_shops"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/db_frag_shop_caption"
                    android:theme="@style/Theme.CostMemories.ForRadio" />

            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingVertical="8dp"
            app:cardBackgroundColor="@color/data_base_card_background"
            app:cardCornerRadius="16dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/on_data_base_card_background"
                android:textSize="18sp"
                android:text="@string/db_frag_filter_all"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_marginTop="8dp"
            android:paddingVertical="8dp"
            app:cardBackgroundColor="@color/data_base_card_background"
            app:cardCornerRadius="16dp">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:listitem="@layout/db_item_view"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
